[package]
name = "venture-launch-dao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.18.16"
solana-sdk = "1.18.16"
squads-multisig = "2.0.1"
thiserror = "1.0.61"
tokio = {version = "1.38.0", features = ["full"]}
