[package]
name = "venture-launch-dao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4.2"
dotenv = "0.15.0"
tokio = "1.27.0"

solana-client = "1.18.16"
solana-sdk = "1.18.16"
spl-token = "4.0.0"
crypto_tracker = { path = "venture_launch_contract" }


[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
